// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`foo.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

 const foo: bool = 123;

=====================================output=====================================
// @flow

const foo: boolean = 123;

================================================================================
`;

exports[`sleep_dependent.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

import {x} from "./sleep"

(x: string);

=====================================output=====================================
// @flow

import { x } from "./sleep";

(x: string);

================================================================================
`;
